methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:8: error: Unit does not take parameters
    peindre();avance();droite();avance();peindre();recule();recule();peindre();avance();gauche();recule()
           ^PictureMono1:8: error: Unit does not take parameters
    peindre();avance();droite();avance();peindre();recule();recule();peindre();avance();gauche();recule()
                                                ^PictureMono1:8: error: Unit does not take parameters
    peindre();avance();droite();avance();peindre();recule();recule();peindre();avance();gauche();recule()
                                                                            ^